i messed up an overlapping issue hah

--- a/retro-style.css
+++ b/retro-style.css
@@ -11,3 +11,7 @@
     visibility: hidden;
   }
 }
+
+.contact-item {
+  margin-bottom: 1rem;
+}
